  https://github.com/marick/Midje/wiki/Specifying-call-counts
* Tabular facts
   https://github.com/marick/Midje/wiki/Tabular-facts
* `fact` will now return true if all the checks succeed;
  false otherwise.
* Can use either Clojure 1.2.0 or 1.2.1
* Plain functions within prerequisite arglists are now
  implicitly wrapped with `exactly`.

= 1.1.1 
* Background prerequisites are now scoped to facts. That
  works better with let-bindings. (Issue 26)

= 1.1
* Can defer individual checks in a fact with the =future=>
  arrow.
  https://github.com/marick/Midje/wiki/Future-facts
* Negating arrows in facts (=not=>)
  https://github.com/marick/Midje/wiki/Negating-arrows
* Folded prerequisites are much more competent
  https://github.com/marick/Midje/wiki/Folded-prerequisites
* Some improvement in error reporting.
* The #'roughly checker can be used for inexact numerical
  comparisons. 
* #'irrelevant is a synonym for #anything
* Line numbers are better reported for failures of very
  stripped-down forms (like (fact 1 => odd?)
* A prerequisite like (f 1) =streams=> [1 2 3] produces
  the next value each time it's called.
* Issue warning when bare function is used in a
  prerequisite. Behavior will change in 1.2.
* Several ways to make checkers that can be used in
  prerequisites.

= 1.0.1 (stable)
* Ben Mabey fix: eagerly preserve record types
* Extended-= and collection checkers have semantics for
  mixing maps and records.

= 1.0.0
* Allow, where unambiguous, collection checkers to have multiple element arguments:

      (f) => (just  1 2 3 ) ; same as..
      (f) => (just [1 2 3])

* Unexpected exceptions are displayed with a trimmed stack trace
       FAIL at (t_collection.clj:427)
           Expected: 33
             Actual: java.lang.Error: Oops!
                     midje.checkers.t_collection$go.invoke(t_collection.clj:425)
                     midje.checkers.t_collection$eval4728$fn__4729.invoke(t_collection.clj:427)